--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,40 @@
   background-color: #15171b;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
-  align-items: center
+  justify-content: left;
+  align-items: flex-start;
 }
 
-.post {
-  color: #454b57;
+.appComponents{
+  min-height: 100vh;
+  background-color: #6b6c70;
   display: flex;
-  padding-left: 10%;
-  padding-top: 6%;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.expandPost {
+  color: #6b6c70;
+  display: flex;
+  padding-left: 6%;
+  flex-direction: column;
+  align-items: center;
+  max-height: 100vh;
+  max-width: 40vw;
+}
+
+
+.post {
+  color: #15171b;
+  display: flex;
+  padding-left: 6%;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-around;
+  justify-content: flex-start;
   min-height: 190px;
   width: 68%;
-  border: 5px solid black;
+  border: 5px solid#15171b;
 }
 
 .posted {
@@ -35,8 +54,20 @@
   flex-direction: column;
   align-self: start;
   max-height: 100vh;
-  max-width: 40vw;
+  min-width: 30vw;
   overflow-y: scroll;
+}
+
+.name {
+  display: flex;
+  align-self: flex-start;
+  padding-top: 10%;
+}
+
+.message {
+  display: flex;
+  align-self: flex-start;
+  padding-top: 10%;
 }
 
 .profileImg {
@@ -48,4 +79,15 @@
   width: 100px;
   margin-left: 10px;
   border-radius: 50%;
+}
+
+button{
+  display: inline-block;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font-size: 100%;
+  font-family: inherit;
+  text-decoration: none;
+  background: none;
 }
